--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-SESSION_ID=
+SESSION_ID=ROMEK-XD&rb2DPkBH
 AUTO_STATUS_SEEN=true
-AUTO_STATUS_REPLY=true
+AUTO_STATUS_REPLY=false
 STATUS_READ_MSG=
 REJECT_CALL=false
 MODE=private
